--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-auth:21.1.0'
     implementation 'com.google.firebase:firebase-database:20.1.0'
+    implementation 'com.google.firebase:firebase-storage:20.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+//    implementation 'com.cloudinary:cloudinary-android:1.29.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
