--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.ShortsTrack">
 
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:usesCleartextTraffic="true"
+
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Funjo"
@@ -30,6 +36,13 @@
         </activity>
         <activity
             android:name="com.example.ShortsTrack.MainActivity"
+            android:theme="@style/Theme.AppCompat.Reels"
+            android:exported="false">
+
+        </activity>
+        <activity
+            android:name="com.example.ShortsTrack.ProfileUpdate"
+            android:theme="@style/Theme.AppCompat.Reels"
             android:exported="false">
 
         </activity>
